tests/integration/tests/di/ui/fail/injectable_factory_invalid_scope.rs
// Compile-fail test: injectable_factory with invalid scope value

use reinhardt_di::injectable_factory;

#[derive(Clone)]
struct MyService;

#[injectable_factory(scope = "invalid_scope")]
async fn make_service() -> MyService {
	MyService
}

fn main() {}
