tests/integration/tests/di/ui/fail/injectable_factory_invalid_scope.stderr
error: Invalid scope. Expected 'singleton', 'request', or 'transient'
 --> tests/di/ui/fail/injectable_factory_invalid_scope.rs:8:30
  |
8 | #[injectable_factory(scope = "invalid_scope")]
  |                              ^^^^^^^^^^^^^^^
